2003-04-18  Markus Germeier  <mager@informatik.uni-bremen.de>

	* mpiosh/callback.c (mpiosh_cmd_health):
	  libmpio/mpio.c (mpio_health): new functions to report
	  health status of SmartMedia cards.

2003-04-12  Markus Germeier  <mager@tzi.de>
	* small error messages changes

2003-04-11  Markus Germeier  <mager@tzi.de>

	* libmpio/directory.c (mpio_directory_make): 
	  libmpio/mpio.c (mpio_file_put_real): 
	  fix timestamp generation as suggested by Sebastian. Thanks!
	  (mpio_directory_is_empty,mpio_dentry_is_dir): 
	  added functions
	  (mpio_dentry_put): another 8.3 generation fix,
	  special treatment for "MPIO RECORD" dir.
	* mpiosh/callback.c (mpiosh_cmd_format): 
	  mkdir "MPIO RECORD" dir if it existed before the format
	
2003-04-07  Markus Germeier  <mager@tzi.de>
	*  Mega-Update all over the place
	   initial support for directories
	   [BEWARE: this might have broken some things!!!]
	
2003-04-06  Markus Germeier  <mager@tzi.de>

	* libmpio/directory.c (mpio_dentry_put): Another 8.3 filename fix
	  This time: try to get the extension right for filenames with
	  more than one '.'

2003-03-26  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_file_put_real): 
	  libmpio/fat.c (mpio_fatentry_new, mpio_fatentry_read): 
	  Small fixes which try to support changes in internal FAT
	  structure (Not Tested!)

2003-03-22  Markus Germeier  <mager@tzi.de>

	* kernel/mpio.c (probe_mpio, write_mpio, read_mpio): 
	  automagically find USB bulk endpoints and use them

2003-03-15  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_init_internal): detect up to four
	  internal memory chips
	* libmpio/fat.c (mpio_fatentry_hw2entry, mpio_fatentry_entry2hw): 
	  libmpio/io.c (mpio_io_block_delete_phys, mpio_io_spare_read): 
	  changes to support four internal chips
	
2003-03-14  Andreas Buesching <crunchy@tzi.de>

	* mpio.spec.in: 
	  add mpio.h and defs.h to the rpm.
	  creating a devel rpm would be oversized
	  
2003-03-14  Markus Germeier  <mager@tzi.de>
