@@ -1,4 +1,4 @@
-SUBDIRS=kernel libmpio mpiosh etc tools
+SUBDIRS=@MPLIB_SUBDIR@ kernel libmpio mpiosh etc tools 
 
 sbin_SCRIPTS=mkmpiodev
 EXTRA_DIST=mpio.spec mkmpiodev
