@@ -5,6 +5,10 @@
 # Andreas Buesching  <crunchy@tzi.de>
 # $ID$
 
+cd mplib
+./autogen.sh
+cd ..
+
 aclocal && autoconf && automake -a && ./configure $@
 
 
